[EDP-DDM-8451] user-process-management log improvement
Change-Id: Iea288d696c6b8b5a72a157a59de7e50abb53b9cb